--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@iconify/react": "^4.1.1",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
+    "framer-motion": "^10.18.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.21.3",
+    "react-slick": "^0.29.0",
+    "react-spring": "^9.7.3",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
