--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iconify/react": "^4.1.1",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
+    "@reduxjs/toolkit": "^2.0.1",
     "framer-motion": "^10.18.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
