--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@iconify/react": "^4.1.1",
     "@mui/icons-material": "^5.15.5",
+    "@mui/lab": "^5.0.0-alpha.161",
     "@mui/material": "^5.15.5",
     "@reduxjs/toolkit": "^2.0.1",
     "framer-motion": "^10.18.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-slick": "^0.29.0",
