--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/lab": "^5.0.0-alpha.161",
     "@mui/material": "^5.15.5",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "framer-motion": "^10.18.0",
     "iconify": "^1.4.0",
@@ -36,6 +37,7 @@
     "react-spring": "^9.7.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
