--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@mui/icons-material": "^5.15.5",
     "@mui/lab": "^5.0.0-alpha.161",
     "@mui/material": "^5.15.5",
+    "@mui/x-date-pickers": "^7.2.0",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
+    "dayjs": "^1.11.10",
     "framer-motion": "^10.18.0",
     "html-react-parser": "^5.1.8",
     "iconify": "^1.4.0",
